--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 <html>
-    
+    <head>
+        <meta charset="utf-8">
+        <title>Oficina GIT 2</title>
+    </head>
+ <body>
+    <h1>Oficina Git 2</h1>
+    <ul>
+        <li>Data: 28/09/24</li>
+        <li>Aula 2 de Git ... Sábado de manhã</li>
+        <li>Que Deus nos guarde</li>
+    </ul>
+ </body>
 </html>
